<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TouristApp</string>
    <string name="action_settings">Settings</string>
    <string name="favorite">Favorite</string>
    <string name="description">Description</string>
    <string name="place">Place</string>
    <string name="country">Country</string>
    <string name="visited">Visited</string>
    <string name="desiretovisit">DesireToVisit</string>
    <string name="textview">TextView</string>
    <string name="voltam_m_r">Voltam már</string>
    <string name="all">All</string>
    <string name="kedvencek">Kedvencek</string>
    <string name="title_activity_main__page_">Tourist App</string>
    <string name="new_user">New User</string>
    <string name="existing_users">Existing users:</string>
    <string name="meg_szeretn_m_n_zni">Meg szeretném nézni</string>
    <string name="username">Username</string>
    <string name="username1">Username1</string>
</resources>