<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPageActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            >

            <HorizontalScrollView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="100dp"
                        android:textSize="30dp"/>

                    <Button
                        android:id="@+id/btn_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all"/>

                    <Button
                        android:id="@+id/btn_voltam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/voltam_m_r"/>

                    <Button
                        android:id="@+id/btn_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kedvencek"/>

                    <Button
                        android:id="@+id/btn_wanttogo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Meg szeretném nézni"/>

                </LinearLayout>



            </HorizontalScrollView>


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main_page" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_add_white_36dp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>